--- a/ui_main.ui
+++ b/ui_main.ui
@@ -919,7 +919,7 @@ QSizeGrip
                  <string>Inicio</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="icons.qrc">
+                 <iconset>
                   <normaloff>:/icons/icons/novos_icones/casa.png</normaloff>:/icons/icons/novos_icones/casa.png</iconset>
                 </property>
                </widget>
@@ -943,7 +943,7 @@ QSizeGrip
                  <string> Insumos</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="icons.qrc">
+                 <iconset>
                   <normaloff>:/icons/icons/novos_icones/salgadinhos.png</normaloff>:/icons/icons/novos_icones/salgadinhos.png</iconset>
                 </property>
                </widget>
@@ -957,7 +957,7 @@ QSizeGrip
                  <string>Receitas</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="icons.qrc">
+                 <iconset>
                   <normaloff>:/icons/icons/novos_icones/cerveja.png</normaloff>:/icons/icons/novos_icones/cerveja.png</iconset>
                 </property>
                </widget>
@@ -971,7 +971,7 @@ QSizeGrip
                  <string>Parametros</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="icons.qrc">
+                 <iconset>
                   <normaloff>:/icons/icons/novos_icones/controles.png</normaloff>:/icons/icons/novos_icones/controles.png</iconset>
                 </property>
                </widget>
@@ -985,7 +985,7 @@ QSizeGrip
                  <string>Painel</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="icons.qrc">
+                 <iconset>
                   <normaloff>:/icons/icons/novos_icones/cerveja (1).png</normaloff>:/icons/icons/novos_icones/cerveja (1).png</iconset>
                 </property>
                </widget>
@@ -1027,7 +1027,7 @@ QSizeGrip
                  <string>Contato</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="icons.qrc">
+                 <iconset>
                   <normaloff>:/icons/icons/novos_icones/comercial.png</normaloff>:/icons/icons/novos_icones/comercial.png</iconset>
                 </property>
                </widget>
@@ -1142,7 +1142,7 @@ QSizeGrip
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="icons.qrc">
+             <iconset>
               <normaloff>:/icons/icons/menu2.png</normaloff>:/icons/icons/menu2.png</iconset>
             </property>
             <property name="iconSize">
@@ -1181,7 +1181,7 @@ QSizeGrip
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="icons.qrc">
+             <iconset>
               <normaloff>:/icons/icons/novos_icones/repetir.png</normaloff>:/icons/icons/novos_icones/repetir.png</iconset>
             </property>
             <property name="iconSize">
@@ -1198,7 +1198,7 @@ QSizeGrip
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="icons.qrc">
+             <iconset>
               <normaloff>:/icons/icons/novos_icones/salve-.png</normaloff>:/icons/icons/novos_icones/salve-.png</iconset>
             </property>
             <property name="iconSize">
@@ -1215,7 +1215,7 @@ QSizeGrip
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="icons.qrc">
+             <iconset>
               <normaloff>:/icons/icons/novos_icones/saida.png</normaloff>:/icons/icons/novos_icones/saida.png</iconset>
             </property>
             <property name="iconSize">
@@ -1583,7 +1583,7 @@ QSizeGrip
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="icons.qrc">
+                <iconset>
                  <normaloff>:/icons/icons/novos_icones/status_ligado.png</normaloff>:/icons/icons/novos_icones/status_ligado.png</iconset>
                </property>
                <property name="iconSize">
@@ -1606,7 +1606,7 @@ QSizeGrip
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="icons.qrc">
+                <iconset>
                  <normaloff>:/icons/icons/novos_icones/status_ligado.png</normaloff>:/icons/icons/novos_icones/status_ligado.png</iconset>
                </property>
                <property name="iconSize">
@@ -1629,7 +1629,7 @@ QSizeGrip
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="icons.qrc">
+                <iconset>
                  <normaloff>:/icons/icons/novos_icones/status_desligado.png</normaloff>:/icons/icons/novos_icones/status_desligado.png</iconset>
                </property>
                <property name="iconSize">
@@ -2267,7 +2267,7 @@ background-color: rgb(0, 188, 0);</string>
                         <string/>
                        </property>
                        <property name="icon">
-                        <iconset resource="icons.qrc">
+                        <iconset>
                          <normaloff>:/icons/icons/novos_icones/mais.png</normaloff>:/icons/icons/novos_icones/mais.png</iconset>
                        </property>
                        <property name="iconSize">
@@ -2304,7 +2304,7 @@ background-color: rgb(0, 188, 0);</string>
                         <string/>
                        </property>
                        <property name="icon">
-                        <iconset resource="icons.qrc">
+                        <iconset>
                          <normaloff>:/icons/icons/novos_icones/erro.png</normaloff>:/icons/icons/novos_icones/erro.png</iconset>
                        </property>
                        <property name="iconSize">
@@ -3956,11 +3956,6 @@ background-color: rgb(0, 188, 0);</string>
                           </property>
                           <column>
                            <property name="text">
-                            <string>Código</string>
-                           </property>
-                          </column>
-                          <column>
-                           <property name="text">
                             <string>Nome</string>
                            </property>
                           </column>
@@ -4052,11 +4047,6 @@ background-color: rgb(0, 188, 0);</string>
                          <widget class="QTableWidget" name="lupulo_tb">
                           <column>
                            <property name="text">
-                            <string>Código</string>
-                           </property>
-                          </column>
-                          <column>
-                           <property name="text">
                             <string>Nome</string>
                            </property>
                           </column>
@@ -4111,11 +4101,6 @@ background-color: rgb(0, 188, 0);</string>
                        <layout class="QVBoxLayout" name="verticalLayout_13">
                         <item>
                          <widget class="QTableWidget" name="levedura_tb">
-                          <column>
-                           <property name="text">
-                            <string>Código</string>
-                           </property>
-                          </column>
                           <column>
                            <property name="text">
                             <string>Nome</string>
@@ -4194,11 +4179,6 @@ background-color: rgb(0, 188, 0);</string>
                          <widget class="QTableWidget" name="adjunto_tb">
                           <column>
                            <property name="text">
-                            <string>Código</string>
-                           </property>
-                          </column>
-                          <column>
-                           <property name="text">
                             <string>Nome</string>
                            </property>
                           </column>
@@ -4275,7 +4255,7 @@ background-color: rgb(0, 188, 0);</string>
                        <string>Exportar</string>
                       </property>
                       <property name="icon">
-                       <iconset resource="icons.qrc">
+                       <iconset>
                         <normaloff>:/icons/icons/novos_icones/computacao-em-nuvem.png</normaloff>:/icons/icons/novos_icones/computacao-em-nuvem.png</iconset>
                       </property>
                      </widget>
@@ -4286,7 +4266,7 @@ background-color: rgb(0, 188, 0);</string>
                        <string>Importar</string>
                       </property>
                       <property name="icon">
-                       <iconset resource="icons.qrc">
+                       <iconset>
                         <normaloff>:/icons/icons/novos_icones/computacao-em-nuvem (1).png</normaloff>:/icons/icons/novos_icones/computacao-em-nuvem (1).png</iconset>
                       </property>
                      </widget>
@@ -4297,7 +4277,7 @@ background-color: rgb(0, 188, 0);</string>
                        <string>Criar Receita</string>
                       </property>
                       <property name="icon">
-                       <iconset resource="icons.qrc">
+                       <iconset>
                         <normaloff>:/icons/icons/novos_icones/cerveja.png</normaloff>:/icons/icons/novos_icones/cerveja.png</iconset>
                       </property>
                      </widget>
@@ -4308,7 +4288,7 @@ background-color: rgb(0, 188, 0);</string>
                        <string>Editar</string>
                       </property>
                       <property name="icon">
-                       <iconset resource="icons.qrc">
+                       <iconset>
                         <normaloff>:/icons/icons/novos_icones/editar.png</normaloff>:/icons/icons/novos_icones/editar.png</iconset>
                       </property>
                       <property name="autoExclusive">
